make a downloadable CV downloadable

--- a/index.html
+++ b/index.html
@@ -12,7 +12,18 @@
         <div class="header-container">
             <img src="1641814386890.jpg" alt="David Kočenda" class="profile-photo">
             <div class="header-content">
-                <h1>David Kočenda</h1>
+                <div class="header-content-top">
+
+                    <h1>David Kočenda</h1>
+                    <a href="resume.pdf" class="pdf-button" download="Resume_Kocenda.pdf">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4" />
+                            <polyline points="7 10 12 15 17 10" />
+                            <line x1="12" y1="15" x2="12" y2="3" />
+                        </svg>
+                        CV as PDF
+                    </a>
+                </div>
                 <div class="subtitle">Full Stack Developer</div>
                 <div class="contact-info">
                     <div class="contact-item">
@@ -63,65 +74,23 @@
             <p>
                 Vyvíjím webové a mobilní aplikace pro startupy, podnikatele a menší firmy. Pomáhám od prvního
                 nápadu přes MVP až po škálování hotového produktu. Nejčastěji pracuju v JavaScript/TypeScript
-                ekosystému – React, React Native, Node.js – a baví mě propojovat software s reálným světem: audio,
-                Bluetooth, hardware, AI workflows.
+                ekosystému – React, React Native, Node.js
             </p>
             <p>
                 Mám přes 6 let komerční praxe v produktovém vývoji, kontraktingu i vedení menších projektů a týmů.
             </p>
         </section>
 
-        <!-- Technical Skills -->
-        <section>
-            <h2>Technologie, se kterými nejčastěji pracuju</h2>
-            <div class="skills-grid">
-                <div class="page-break-avoid">
-                    <h3>Frontend / mobil</h3>
-                    <p>React, React Native, TypeScript, Next.js, Electron</p>
-                </div>
-                <div class="page-break-avoid">
-                    <h3>Backend</h3>
-                    <p>Node.js, MongoDB, Cloudflare Workers, Postgres, sqlite</p>
-                </div>
-                <div class="page-break-avoid">
-                    <h3>Specializace</h3>
-                    <p>Web Audio, Web Bluetooth, Native Bluetooth, AI workflows, Android</p>
-                </div>
-                <div class="page-break-avoid">
-                    <h3>Nástroje</h3>
-                    <p>Git, CI/CD, YOLO/Ultralytics, Computer Vision</p>
-                </div>
-            </div>
-        </section>
-
         <!-- Services -->
         <section>
             <h2>S čím vám můžu pomoct</h2>
             <ul class="services-list">
-                <li>
-                    <span class="arrow-icon">➡️</span>
-                    <span>návrh a vývoj MVP i kompletních produktů (SaaS, interní nástroje, B2B portály)</span>
-                </li>
-                <li>
-                    <span class="arrow-icon">➡️</span>
-                    <span>refaktoring a modernizace stávajících frontendů (lepší DX, výkon, struktura)</span>
-                </li>
-                <li>
-                    <span class="arrow-icon">➡️</span>
-                    <span>integrace hardware / Bluetooth / audio do webových a mobilních aplikací</span>
-                </li>
-                <li>
-                    <span class="arrow-icon">➡️</span>
-                    <span>návrh architektury, code review, rozjetí vývojového procesu ve startupu</span>
-                </li>
-                <li>
-                    <span class="arrow-icon">➡️</span>
-                    <span>krátkodobý záskok senior developera nebo pomoc s rozjetím nového projektu</span>
-                </li>
-                <li>
-                    <span class="arrow-icon">➡️</span>
-                    <span>automatizace interních procesů za pomoci AI workflows</span>
-                </li>
+                <li>Návrh a vývoj MVP i kompletních produktů (SaaS, interní nástroje, B2B portály)</li>
+                <li>Refaktoring a modernizace stávajících frontendů (lepší DX, výkon, struktura)</li>
+                <li>Integrace hardware / Bluetooth / audio do webových a mobilních aplikací</li>
+                <li>Návrh architektury, code review, rozjetí vývojového procesu ve startupu</li>
+                <li>Krátkodobý záskok senior developera nebo pomoc s rozjetím nového projektu</li>
+                <li>Automatizace interních procesů za pomoci AI workflows</li>
             </ul>
         </section>
 
@@ -134,25 +103,25 @@
                 <div class="experience-header">
                     <div>
                         <h3>Full Stack Developer</h3>
-                        <div class="company-name">Sentien · Contract</div>
+                        <div class="company-name">Sentien</div>
                     </div>
                     <span class="date-range">Aug 2023 - Present · 2 yrs 4 mos</span>
                 </div>
                 <div class="location">Prague, Czechia · Remote</div>
                 <ul class="experience-list">
                     <li>Rozvíjel jsem multiplatformní aplikaci v React Native pro kustomizaci Bluetooth headsetu –
-                        zjednodušil jsem proces připojení a nastavení tak, aby se produk uživatelům lépe používal.
+                        zjednodušil jsem proces připojení a nastavení tak, <strong>aby se produkt uživatelům lépe používal</strong>.
                     </li>
                     <li>Implementoval jsem nástroj pro správu a omezení přístupu k AI API klíčům (více týmů,
-                        nastavení limitů, audit používání), která firmě umožnila bezpečněji experimentovat s AI
-                        službami.</li>
+                        nastavení limitů, audit používání), která firmě <strong>umožnila bezpečněji experimentovat s AI
+                        službami</strong>.</li>
                     <li>Vytvořil jsem testovací software pro výrobní linku: Electron aplikaci pro fyzické testovací
-                        zařízení, backend na Cloudflare Workers ukládání výsledků testů do databáze MongoDB. Včetně
-                        vizualizace výsledků v dashboardu, který usnadnil odhalování problémů ve výrobě.</li>
+                        zařízení, backend na Cloudflare Workers s MongoDB. Včetně
+                        vizualizace výsledků v dashboardu, který <strong>usnadnil odhalování problémů ve výrobě</strong>.</li>
                     <li>Vyvinul jsem rozsáhlou POC Android aplikaci, která zkoumala limity integrace Androidu s
                         vlastním Bluetooth headsetem (různé způsoby ovládání telefonu přes headset, experimentální
                         interakce, včetně hlasové interakce s AI assistenty). Výstupem byly ověřené technické
-                        možnosti a jasnější představa, jaké scénáře dávají produktově smysl.</li>
+                        možnosti a <strong>jasnější představa, jaké scénáře dávají produktově smysl</strong>.</li>
                 </ul>
                 <div class="tech-stack">
                     Tech stack: Android, MongoDB, Cloudflare, React Native, Electron, Web Audio, Audio analysis, Web
@@ -165,7 +134,7 @@
                 <div class="experience-header">
                     <div>
                         <h3>Senior Frontend Developer / PM</h3>
-                        <div class="company-name">Softopus s.r.o · Contract</div>
+                        <div class="company-name">Softopus s.r.o</div>
                     </div>
                     <span class="date-range">Feb 2023 - Jul 2023 · 6 mos</span>
                 </div>
@@ -173,10 +142,10 @@
                 <ul class="experience-list">
                     <li>Nastoupil jsem do rozjetého Next.js + Magento e-shopu s přetíženým backlogem. Společně s
                         klientem jsme backlog přetřídili podle dopadu na byznys (checkout, košík, přihlášení) →
-                        řešení problémů, které brzdily tržby a support.</li>
+                        <strong>řešení problémů, které brzdily tržby a support</strong>.</li>
                     <li>Opravoval jsem kritické chyby v nákupním procesu (košík, login, správa objednávek), které
-                        vedly k nedokončeným objednávkám nebo zbytečným dotazům na zákaznickou podporu → stabilnější
-                        provoz a méně problémů v sezóně.</li>
+                        vedly k nedokončeným objednávkám nebo zbytečným dotazům na zákaznickou podporu → <strong>stabilnější
+                        provoz a méně problémů v sezóně</strong>.</li>
                     <li>Podílel jsem se na projektovém řízení hlavně ze strany zaměstnavatele → udržování přehledu o
                         stavu projektu u programátorů, zpracování požadavků od klienta do user stories po
                         pravidelných callech s klientem.</li>
@@ -188,18 +157,18 @@
                 <div class="experience-header">
                     <div>
                         <h3>Project Lead - Project</h3>
-                        <div class="company-name">Samedaylogistics Group · Contract</div>
+                        <div class="company-name">Samedaylogistics Group</div>
                     </div>
                     <span class="date-range">Dec 2022 - Mar 2023 · 4 mos</span>
                 </div>
                 <div class="location">Remote</div>
                 <ul class="experience-list">
-                    <li>Vedl jsem vývoj plně funkčního prototypu shipment tracking aplikace (React + Firebase
+                    <li><strong>Vedl jsem vývoj</strong> plně funkčního prototypu shipment tracking aplikace (React + Firebase
                         backend), který umožňoval evidenci zásilek, jich stavů a historii pohybu. Součástí byly
                         emailové notifikace a jednoduché zákaznické rozhraní.</li>
                     <li>Zodpovídal jsem za komunikaci s klientem – sběr požadavků, jejich zpřesnění a převod do
                         konkrétních user stories.</li>
-                    <li>Vedl a mentoroval jsem juniorního kolegu, rozděloval práci, dělal code review a pomáhal
+                    <li><strong>Vedl a mentoroval jsem juniorního kolegu</strong>, rozděloval práci, dělal code review a pomáhal
                         nastavovat základní standardy v kódu i v procesu.</li>
                     <li>Prototyp sloužil jako „ice breaker" pro digitalizaci: ukázal vedení mateřské firmy, jak může
                         vypadat centralizované sledování zásilek a automatizované informování zákazníků.</li>
@@ -218,9 +187,9 @@
                 <ul class="experience-list">
                     <li>Transformace velké, roztříštěné codebase do modulárního, udržovatelného frontendu (React /
                         TypeScript) s jasnou architekturou.</li>
-                    <li>Postupným refaktoringem jsem snížil technický dluh: odstranění duplicitního kódu, zavedení
+                    <li>Postupným refaktoringem jsem <strong>snížil technický dluh</strong>: odstranění duplicitního kódu, zavedení
                         design systému a sdílených komponent.</li>
-                    <li>Spolupracoval jsem přímo s foundry a pomáhal překlápět nápady do konkrétních user stories a
+                    <li>Spolupracoval jsem přímo s foundry a <strong>pomáhal překlápět nápady do konkrétních user stories</strong> a
                         technických řešení nových součástí systému.</li>
                 </ul>
             </div>
@@ -230,12 +199,12 @@
                 <div class="experience-header">
                     <div>
                         <h3>Frontend Developer - Project</h3>
-                        <div class="company-name">PRINCIPIA SOLUTIONS s.r.o. · Contract</div>
+                        <div class="company-name">PRINCIPIA SOLUTIONS s.r.o.</div>
                     </div>
                     <span class="date-range">Apr 2020 - May 2021 · 1 yr 2 mos</span>
                 </div>
                 <ul class="experience-list">
-                    <li>Podílel jsem se na vývoji aplikací pro Národní knihovnu v Praze – modernizace UI,
+                    <li>Podílel jsem se na vývoji aplikací pro <strong>Národní knihovnu v Praze</strong> – modernizace UI,
                         implementace komponent a práce s rozsáhlejším datovým obsahem za striktních bezpečnostních
                         podmínek.</li>
                     <li>Úzce jsem spolupracoval s backend týmem na návrhu API a integracích.</li>
@@ -263,6 +232,12 @@
                     <span class="date-range">Nov 2016 - Dec 2017 · 1 yr 2 mos</span>
                 </div>
             </div>
+        </section>
+
+        <section class="tech-section">
+            <p class="tech-stack-line">
+                <strong>Technologie:</strong> React · React Native · TypeScript · JavaScript · Next.js · Node.js · Python · Django · Electron · Android · Kotlin · MongoDB · PostgreSQL · Firebase · Cloudflare · Redux · Zustand · Tailwind CSS · Web Audio · Web Bluetooth · Native Bluetooth · AI workflows · Git · CI/CD
+            </p>
         </section>
     </div>
     </div>
